# DarkNet-for-Android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DarknetAPI.cpp  DarknetAPI.h  art.c  classifier.c  data.h  demo.c  getopt.c  gettimeofday.h  image.c  image.h  native-lib.cpp  parser.h  utils.c
app/src/main/java/x/leon/: DarknetDao.java  MainActivity.java  Result.java  UtilFile.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/leon/x/xdarknet2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
